--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ckeditor4-react": "^4.1.0",
     "formik": "^2.2.9",
     "framer-motion": "^6.5.1",
+    "html-react-parser": "^3.0.4",
     "next": "13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
